# Poisson

./: CImg.h  CMakeLists.txt  EigenImage.cpp  EigenImage.h  Image.h  README.md  SeamlessCloning.cpp  SeamlessCloning.h  exemple.m  imdisplay.cpp  imdisplay.h  main.cpp  mxTraits.h  poisson-video.srt  utils.h
Images/: mask.pgm
Images/bird/: mask.pgm
Images/family/: mask.pgm
Images/gradf/: mask.pgm
Images/mountainmoon/: mask.pgm
Images/swim/: mask.pgm
